<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dokuin</string>
    <string name="sign_in">Sign In</string>
    <string name="password_hint">Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="cd_logo">logo</string>
    <string name="already_have_account">Already have account?</string>
    <string name="password_hint_conf">Confirm Password</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="all_files">All Files</string>
    <string name="check_files">Check File</string>
    <string name="what_would_you_like_to_do">Let\'s manage and secure your document !</string>
    <string name="search">Search</string>
    <string name="waiting">Waiting</string>
    <string name="completed">Done</string>
    <string name="loading_name" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="newest">Newest</string>
    <string name="see_all">See All</string>
    <string name="waiting_documents">Waiting Documents</string>
    <string name="latest">Latest\u0020</string>
    <string name="documents">Documents</string>
    <string name="approved_documents">Approved Documents</string>
    <string name="viewed">Viewed</string>
    <string name="greeting">Hai, %s</string>
    <string name="greeting_insctance">Let\'s check your newes list !</string>

    <string-array name="kelas">
        <item>X (Sepuluh)</item>
        <item>XI (Sebelas)</item>
        <item>XII (Duabelas)</item>
    </string-array>
    <string-array name="sekolah">
        <item>--Pilih Sekolah--</item>
        <item>SMK N 2 Yogyakarta</item>
        <item>SMA N 1 Yogyakarta</item>
        <item>SMA N 1 Godean</item>
    </string-array>
</resources>