<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/cd_logo"
        android:src="@drawable/ic_logo_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="170dp"
        android:layout_marginRight="32dp"
        android:elevation="5dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/sign_up"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:autofillHints="name"
                android:drawableStart="@drawable/ic_user_outline"
                android:drawablePadding="10dp"
                android:hint="@string/name_hint"
                android:textFontWeight="100"
                android:inputType="textCapSentences"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_sign_up" />

            <EditText
                android:id="@+id/et_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:autofillHints="username"
                android:drawableStart="@drawable/ic_email_outline"
                android:drawablePadding="10dp"
                android:hint="@string/email_hint"
                android:inputType="text|textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textFontWeight="100"
                app:layout_constraintTop_toBottomOf="@id/et_sign_up_name" />

            <EditText
                android:id="@+id/et_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_lock_outline"
                android:drawablePadding="10dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textFontWeight="100"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/et_sign_up_email" />

            <EditText
                android:id="@+id/et_sign_up_password_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_lock_outline"
                android:drawablePadding="10dp"
                android:hint="@string/password_hint_conf"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:textFontWeight="100"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/et_sign_up_password" />
            <EditText
                android:id="@+id/et_sign_up_telp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawableStart="@drawable/ic_lock_outline"
                android:drawablePadding="10dp"
                android:hint="No. Telp"
                android:inputType="number"
                android:paddingStart="16dp"
                android:textFontWeight="100"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/et_sign_up_password_conf" />
            <Spinner
                android:id="@+id/sp_sekolah"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:entries="@array/sekolah"
                android:layout_margin="16dp"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_lock_outline"
                android:drawablePadding="10dp"
                android:hint="No. Telp"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:textFontWeight="100"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/et_sign_up_telp" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/sp_sekolah" />

            <LinearLayout
                android:id="@+id/btn_goto_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:paddingBottom="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_up">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/already_have_account"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>